replit: postgres db support

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,9 @@ ANTHROPIC_API_KEY=sk-ant-xxx
 CALENDLY_ACCESS_TOKEN=xxx
 CALENDLY_WEBHOOK_SECRET=xxx
 
-# Database (to be configured for Replit/Postgres)
-# DATABASE_URL=postgresql://...
+# Database: when set, app uses Postgres (e.g. Neon); otherwise SQLite (data/outerfields.db)
+# On Replit: set DATABASE_URL in Secrets to your Neon (or other) Postgres URL.
+# DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 
 # Session secret (for cookie signing)
 # SESSION_SECRET=xxx
