--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite dev --host",
     "build": "vite build",
+    "db:check": "npx tsx scripts/check-db-connection.ts",
+    "db:push": "npx tsx scripts/push-sqlite-to-postgres.ts",
     "preview": "vite preview --host",
     "start": "node build/index.js",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -15,6 +17,7 @@
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/pg": "^8.16.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "svelte": "^5.16.0",
@@ -27,7 +30,9 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
     "better-sqlite3": "^12.6.2",
+    "deasync": "^0.1.31",
     "lucide-svelte": "^0.562.0",
+    "pg": "^8.18.0",
     "resend": "^6.7.0",
     "stripe": "^20.1.2"
   }
