--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@anthropic-ai/sdk": "^0.39.0",
     "better-sqlite3": "^12.6.2",
     "deasync": "^0.1.31",
+    "hls.js": "^1.6.15",
     "lucide-svelte": "^0.562.0",
     "pg": "^8.18.0",
     "resend": "^6.7.0",
-    "stripe": "^20.1.2"
+    "stripe": "^20.1.2",
+    "tus-js-client": "^4.3.1"
   }
 }
